# Invart

./: .dockerignore  .gitignore  .invartignore  .kappaskiignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  LICENSE  README.md  SECURITY.md  gold.kappaski_smoke.json  pyproject.toml
docs/: README.md  adapters.md  agent-control-plane-model-and-paper-direction.md  api-sdk.md  architecture.html  architecture.md  benchmark-research-and-experiment-mapping.html  benchmark-research-and-experiment-mapping.md  cli-reference.md  code-design-and-development-standards.html  concepts-and-closed-loop-v0.1.md  concepts-glossary.html  concepts.md  design-review.md  dev-plan-v0.1.md  enterprise-unregistered-agent-coverage-roadmap.html  enterprise-value-loops.md  evaluation-and-benchmarks.html  evaluation-and-benchmarks.md  evaluation.md  examples.md  five-layer-operator-guide.md  full-product-readiness.html  implementation-audit-v0.1-v0.39.html  index.html  index.md  industry-research-and-comparison.md  kappaski-new-user-briefing.html  kappaski-v0.1-prototype-design.html  open-source-boundary.md  paper-experiment-protocol.html  plugin-extension-architecture-review-2026-05.html  plugin-extension-architecture-review-2026-05.md  product-decisions.html  product-decisions.md  product.md  proof-workflow-v0.1.md  quickstart.md  release-history.md  roadmap-coverage.html  (+48 more)
examples/: README.md  basic-managed-session.sh  policy-profile.toml  unsafe-action-event.json
scripts/: container-demo.sh  container-test.sh
tests/: test_core.py  test_demos_roadmap.py  test_experiments.py  (+5 more)
(+205 files in other folders)
