[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kappaski"
version = "0.1.0"
description = "Local-first Agent Runtime Control Plane."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Kappaski" }]
dependencies = []

[project.scripts]
kappaski = "kappaski.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
