[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "invart"
version = "0.9.2"
description = "Local-first Agent Runtime Control Plane for safety, policy, evidence, and audit."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Invart" }]
dependencies = []

[project.scripts]
invart = "invart.cli:main"
kappaski = "invart.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
